--- a/public/components/ongoing-trips/ongoingTrips.html
+++ b/public/components/ongoing-trips/ongoingTrips.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-lg-4" style="padding-top:60px">
             <button class="btn btn-primary">future Functionality</button>
-            <button class="btn btn-primary" ng-click="refresh()"><span class="glyphicon" glyphicon-refresh></span>refresh</button>
+            <button class="btn btn-primary" ng-click="refresh()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
         </div>
     </div>
     <!-- /.row -->
@@ -17,8 +17,8 @@
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="dataTable_wrapper">
-                        <div class="refresh-dashboard" ng-show="isRefreshing">
-                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <div class="refresh-dashboard" ng-show="isRefreshing"></div>
+                            <table class="table table-striped table-bordered table-hover" id="dataTables-example" ng-hide="isRefreshing">
                                 <thead>
                                     <tr>
                                         <th>Trip ID</th>
@@ -46,10 +46,9 @@
                                         <td><button class="btn btn-sm btn-primary" ng-click="stopTrip(trip.tripId)">Finish</button></td>
                                     </tr>
                                 </tbody>
-                               
+
                             </table>
-                            </div>
-                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.table-responsive -->
