--- a/public/components/order/assignTrips.html
+++ b/public/components/order/assignTrips.html
@@ -12,18 +12,25 @@
                         <form role="form">
                             <div class="form-group col-sm-3">
                                 <label>Gps</label>
-                                <input class="form-control" placeholder="Enter GpsID" ng-model="tempTruck.GpsId"></input>
+                                <input class="form-control" placeholder="Enter GpsID" ng-model="tempTruck.GpsId" required></input>
                             </div>
-                            <div class="form-group col-sm-3">
+                            <div class="form-group col-sm-1">
                                 <label>Tons</label>
-                                <input class="form-control" placeholder="Enter Tons" ng-model="tempTruck.Tons"></input>
+                                <input class="form-control" placeholder="21" ng-model="tempTruck.Tons" required></input>
+                            </div>
+                            <div class="form-group col-sm-5">
+                                <label class="col-sm-3">Date/Time</label>
+                                <div class="col-sm-10">
+                                    <p class="input-group">
+                                        <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm" ng-model="assignedTime" is-open="datepickerOpen"  required/>
+                                        <span class="input-group-btn">
+                                            <button type="button" class="btn btn-default" ng-click="openCalendar($event, 'assignedTime')"><i class="fa fa-calendar"></i></button>
+                                        </span>
+                                    </p>
+                                </div>
                             </div>
                             <div class="form-group col-sm-3">
-                                <label>Start Time</label>
-                                <input class="form-control" placeholder="Enter Start Time" ng-model="tempTruck.StartTime"> </input>
-                            </div>
-                            <div class="form-group col-sm-3">
-                                <label>Start Time</label>
+                                <label>SalesId</label>
                                 <input class="form-control" placeholder="Enter Start Time" ng-model="tempTruck.SalesId">
                                 </input>
                             </div>
@@ -52,10 +59,10 @@
                                     <th>Start Time</th>
                                     <th>Sales Id</th>
                                     <tbody>
-                                        <tr class="odd gradeX" ng-repeat="truck in res.TripList">
+                                        <tr class="odd gradeX" ng-repeat="truck in tripList">
                                             <td>{{truck.GpsId}}</td>
                                             <td>{{truck.Tons}}</td>
-                                            <td>{{truck.StartTime}}</td>
+                                            <td>{{truck.startTime.toString()}}</td>
                                             <td>{{truck.SalesId}}</td>
                                         </tr>
                                     </tbody>
